<resources>
    <string name="app_name">Train Tracker</string>
    <string name="button">Button</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_Directions">Peta</string>
    <string name="title_Alarm">Alarm</string>
    <string name="title_Checkspeed">Cek Kecepatan</string>
    <string name="search_bar1">Pilih Stasiun Keberangkatan</string>

    <string-array name="OptionAlarm">
        <item>Pilih Mode</item>
        <item>Pilih Ringtone</item>
    </string-array>

    <string-array name="OptionAlarmMode">
        <item>Mode getar saja</item>
        <item>Mode suara saja</item>
        <item>Mode suara dan getar</item>
    </string-array>

    <string-array name="StationName">
        <item>Stasiun 1, Bandung</item>
        <item>Stasiun 2, Jakarta</item>
        <item>Stasiun 3, Semarang</item>
        <item>Stasiun 4, Solo</item>
        <item>Stasiun 5, Surabaya</item>
        <item>Stasiun 6, Jember</item>
    </string-array>

    <string-array name="OptionRingtoneMode">
        <item>Default</item>
        <item>Lucky1</item>
        <item>Lucky2</item>
    </string-array>

    <string name="title_activity_maps">Peta</string>
    <string name="settings">Pengaturan</string>
    <string name="title_Schedule">Jadwal</string>
    <string name="search_train_string">Cari Jadwal Kereta </string>
    <string name="search_train_hint">Masukan Nama Kereta</string>

    <string name="search_btn_text">Set Stasiun</string>
    <string name="alarm_tv">Alarm</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps_activityaaa">Map</string>
    <string name="text_no_data">Data tidak ditemukan</string>
    <string name="text_jarakTotal">Estimasi Jarak dan Waktu ke Stasiun Tujuan</string>
    <string name="text_jarakNext">Estimasi Jarak dan Waktu ke Stasiun Selanjutnya</string>
    <string name="text_kecepatan">Kecepatan Kereta</string>
    <string name="text_jarak">Jarak</string>
    <string name="text_waktu">Waktu</string>
    <string name="text_namaStasiun">Stasiun</string>
    <string name="text_titikDua">:</string>


    <string name="text_exit">Keluar dari aplikasi?</string>
    <string name="text_yes">Ya</string>
    <string name="text_no">Tidak</string>

    <string name="text_select_kereta">Pilih Kereta yang Digunakan</string>
    <string name="text_select_awal">Stasiun Awal</string>
    <string name="text_select_akhir">Stasiun Akhir</string>
</resources>
