<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_directions"
            android:icon="@drawable/ic_directions_railway_black_24dp"
            android:title="@string/title_Directions"/>
        <item
            android:id="@+id/navigation_schedule"
            android:icon="@drawable/calendar_clock"
            android:title="@string/title_Schedule"/>
        <item
            android:id="@+id/navigation_alarm"
            android:icon="@drawable/ic_access_alarm_black_24dp"
            android:title="@string/title_Alarm" />

    </group>



</menu>
