<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/search_train_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <EditText
        android:id="@+id/et_train_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_search"
        android:layout_alignStart="@+id/tv_search"
        android:layout_below="@+id/tv_search"
        android:hint="@string/search_train_hint" />

    <ImageView
        android:id="@+id/iv_get_schedule_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_toEndOf="@id/et_train_search"
        android:src="@android:drawable/ic_menu_send"
        android:layout_toRightOf="@id/et_train_search"
        android:layout_alignTop="@id/et_train_search"
        android:layout_alignBottom="@id/et_train_search"
        android:layout_marginStart="20dp" />

    <ListView
        android:id="@+id/listview_schedule"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/et_train_search"
        android:layout_marginTop="25dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="20dp"/>

    <ListView
        android:id="@+id/listview_route"
        android:layout_below="@id/et_train_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp">
    </ListView>

    <TextView
        android:id="@+id/tv_nodata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_train_search"
        android:layout_alignStart="@id/listview_route"
        android:layout_alignLeft="@id/listview_route"
        android:layout_alignRight="@id/listview_route"
        android:layout_alignEnd="@id/listview_route"
        android:text="@string/text_no_data"
        android:textSize="18dp"
        android:visibility="invisible"
        android:layout_marginLeft="15dp"
        />
</RelativeLayout>